[gd_scene load_steps=24 format=3 uid="uid://b05uadrom8blw"]

[ext_resource type="Script" path="res://npc/enemy_tri_eye.gd" id="1_dnkxr"]
[ext_resource type="Texture2D" uid="uid://cs1a11vty5ty0" path="res://assets/enemies/melee-Sheet.png" id="1_rbip2"]
[ext_resource type="PackedScene" uid="uid://cwipuv3723neg" path="res://player/character_components/hurtBox.tscn" id="2_vpbqo"]
[ext_resource type="PackedScene" uid="uid://dlubxqu2bs41o" path="res://player/character_components/health.tscn" id="4_p23gm"]
[ext_resource type="AudioStream" uid="uid://7rcbqgj8ef05" path="res://assets/sounds/lasershoot.mp3" id="5_12xo1"]
[ext_resource type="AudioStream" uid="uid://cfhmmgy2nxoqc" path="res://assets/sounds/vanishing.mp3" id="6_y435f"]
[ext_resource type="AudioStream" uid="uid://fwuqbgdfquwx" path="res://assets/sounds/blood.mp3" id="7_41br4"]
[ext_resource type="AudioStream" uid="uid://coo4qp2kipcyp" path="res://assets/sounds/clap.mp3" id="8_18xgr"]
[ext_resource type="AudioStream" uid="uid://duf5k5mapu0oj" path="res://assets/sounds/hit.mp3" id="9_0jeor"]
[ext_resource type="Script" path="res://player/character_components/melee_collision_box.gd" id="10_gl5nr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bbok2"]
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_plcyg"]
radius = 12.0

[sub_resource type="Animation" id="Animation_xo2l5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MeleeCollisionBox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeleeCollisionBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MeleeCollisionBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -20)]
}

[sub_resource type="Animation" id="Animation_fe63q"]
resource_name = "attack_left"
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.126905,
"start_offset": 0.0,
"stream": ExtResource("5_12xo1")
}, {
"end_offset": 0.126905,
"start_offset": 0.0,
"stream": ExtResource("5_12xo1")
}],
"times": PackedFloat32Array(0, 0.5)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101, 102, 103, 104, 105]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MeleeCollisionBox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeleeCollisionBox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MeleeCollisionBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -20)]
}

[sub_resource type="Animation" id="Animation_gec7l"]
resource_name = "attack_right"
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.128842,
"start_offset": 0.0,
"stream": ExtResource("5_12xo1")
}, {
"end_offset": 0.128842,
"start_offset": 0.0,
"stream": ExtResource("5_12xo1")
}],
"times": PackedFloat32Array(0, 0.5)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125, 126, 127, 128, 129]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MeleeCollisionBox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MeleeCollisionBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MeleeCollisionBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, -20)]
}

[sub_resource type="Animation" id="Animation_g5ehu"]
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [320, 321, 322, 323, 324, 325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 1.5403,
"stream": ExtResource("6_y435f")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_41br4")
}, {
"end_offset": 0.715479,
"start_offset": 0.0,
"stream": ExtResource("7_41br4")
}],
"times": PackedFloat32Array(-0.0355844, 0, 0.6)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_18xgr")
}, {
"end_offset": 0.572117,
"start_offset": 0.41215,
"stream": ExtResource("6_y435f")
}],
"times": PackedFloat32Array(0, 0.605114)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_56sli"]
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_41br4")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0314822,
"stream": ExtResource("9_0jeor")
}],
"times": PackedFloat32Array(0.0314822)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_1hk04"]
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_1nsjn"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_goxk4"]
resource_name = "walk_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76]
}

[sub_resource type="Animation" id="Animation_eq8sx"]
resource_name = "walk_right"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtf3n"]
_data = {
"RESET": SubResource("Animation_xo2l5"),
"attack_left": SubResource("Animation_fe63q"),
"attack_right": SubResource("Animation_gec7l"),
"death": SubResource("Animation_g5ehu"),
"hit": SubResource("Animation_56sli"),
"idle_left": SubResource("Animation_1hk04"),
"idle_right": SubResource("Animation_1nsjn"),
"walk_left": SubResource("Animation_goxk4"),
"walk_right": SubResource("Animation_eq8sx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ki3i3"]
size = Vector2(27, 49)

[node name="EnemyTriEye" type="CharacterBody2D"]
y_sort_enabled = true
texture_filter = 3
script = ExtResource("1_dnkxr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7, -21)
texture = ExtResource("1_rbip2")
centered = false
offset = Vector2(-22, -32)
hframes = 12
vframes = 17
region_rect = Rect2(133, 163, 26, 40)

[node name="HitBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-7, -12)
shape = SubResource("CapsuleShape2D_bbok2")

[node name="HurtBox" parent="." instance=ExtResource("2_vpbqo")]
visible = false
position = Vector2(-7, -16)
collision_layer = 256
collision_mask = 192

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 5)
shape = SubResource("CircleShape2D_plcyg")

[node name="Health" parent="." instance=ExtResource("4_p23gm")]
visible = false
max_health = 3

[node name="AttackTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_jtf3n")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 20.0
path_postprocessing = 1
avoidance_enabled = true
radius = 16.0
debug_enabled = true

[node name="TrackingTimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.1
autostart = true

[node name="MeleeCollisionBox" type="Area2D" parent="."]
position = Vector2(-20, -20)
collision_layer = 1024
collision_mask = 32
monitoring = false
monitorable = false
script = ExtResource("10_gl5nr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeCollisionBox"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_ki3i3")
